--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
         h1{
             text-align: center; 
             background-color: beige;
+            height: 90px;
             width: 500px;
             margin: 0 auto;
-            margin-top: 250px;
+            margin-top: 230px;
             border-radius: 10px;
             transition: 10s 5s 6s;
+            padding: 10px;
         }
         h1:hover{
              background-color: rosybrown;
@@ -27,9 +29,12 @@
         .far:hover{
             color:whitesmoke;
         }
+        .flower:hover{
+            color: red;
+        }
     </style>
 </head>
 <body>
-    <h1>HAPPY BIRTHDAY MY DEAR <span class="far">FARZANA YEASMIN LIZA</span></h1>
+    <h1>HAPPY BIRTHDAY MY DEAR <span class="far">FARZANA YEASMIN LIZA</span>🌸</h1>
 </body>
 </html>
