--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
              background-color: rosybrown;
              color: lightpink;
              transition: 10s;
+             transform: rotate(360deg);
         }
         .far{
             color: orchid;
